--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ unused_variables = "allow"
 unused_imports = "allow"
 
 [dependencies]
-sea-orm = { version = "1.1.8", default-features = false, features = [] }
+sea-orm = { version = "1.1.8", default-features = false, features = [
+  "sqlx-postgres",
+  "tokio",
+] }
 teloxide = { version = "0.15.0", default-features = false, features = [
   "ctrlc_handler",
 ] }
