--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ unused_imports = "allow"
 [dependencies]
 sea-orm = { version = "1.1.8", default-features = false, features = [
   "sqlx-postgres",
+  "runtime-tokio-rustls",
 ] }
 teloxide = { version = "0.15.0", default-features = false, features = [
   "ctrlc_handler",
