--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,6 @@ name = "ollama_bot"
 version = "0.1.0"
 edition = "2024"
 
-[lints.rust]
-dead_code = "allow"
-unused_variables = "allow"
-unused_imports = "allow"
-
 [dependencies]
 sea-orm = { version = "1.1.8", default-features = false, features = [
   "sqlx-postgres",
@@ -15,6 +10,7 @@ sea-orm = { version = "1.1.8", default-features = false, features = [
 ] }
 teloxide = { version = "0.15.0", default-features = false, features = [
   "ctrlc_handler",
+  "rustls",
 ] }
 tokio = { version = "1.44.1", default-features = false, features = [
   "macros",
