--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-sea-orm = { version = "1.1.8", default-features = false, features = [
+sea_orm = { version = "1.1.8", default-features = false, features = [
+  "macros",
   "sqlx-postgres",
   "runtime-tokio-rustls",
 ] }
